# secret-service-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  NOTES_ON_PORT.md  README.md  justfile  notes.txt  search-index.js
.github/workflows/: ci.yaml
crypto/: index.html
crypto/aead/: index.html  trait.AeadDecryptor.html  trait.AeadEncryptor.html
crypto/aes/: enum.KeySize.html  fn.cbc_decryptor.html  fn.cbc_encryptor.html  fn.ctr.html  fn.ecb_decryptor.html  fn.ecb_encryptor.html  index.html
crypto/aes_gcm/: index.html  struct.AesGcm.html
crypto/aesni/: index.html  struct.AesNiDecryptor.html  struct.AesNiEncryptor.html
crypto/aessafe/: index.html  struct.AesSafe128Decryptor.html  struct.AesSafe128DecryptorX8.html  struct.AesSafe128Encryptor.html  struct.AesSafe128EncryptorX8.html  struct.AesSafe192Decryptor.html  struct.AesSafe192DecryptorX8.html  struct.AesSafe192Encryptor.html  struct.AesSafe192EncryptorX8.html  struct.AesSafe256Decryptor.html  struct.AesSafe256DecryptorX8.html  struct.AesSafe256Encryptor.html  struct.AesSafe256EncryptorX8.html
crypto/bcrypt/: fn.bcrypt.html  index.html
crypto/bcrypt_pbkdf/: fn.bcrypt_pbkdf.html  index.html
crypto/blake2b/: index.html  struct.Blake2b.html
crypto/blockmodes/: index.html  struct.CbcDecryptor.html  struct.CbcEncryptor.html  struct.CtrMode.html  struct.CtrModeX8.html  struct.DecPadding.html  struct.EcbDecryptor.html  struct.EcbEncryptor.html  struct.EncPadding.html  struct.NoPadding.html  struct.PkcsPadding.html  trait.PaddingProcessor.html
crypto/blowfish/: index.html  struct.Blowfish.html
crypto/buffer/: enum.BufferResult.html  index.html  struct.BorrowedWriteBuffer.html  struct.OwnedReadBuffer.html  struct.OwnedWriteBuffer.html  struct.RefReadBuffer.html  struct.RefWriteBuffer.html  trait.ReadBuffer.html  trait.WriteBuffer.html
crypto/chacha20/: index.html  struct.ChaCha20.html
crypto/chacha20poly1305/: index.html  struct.ChaCha20Poly1305.html
crypto/curve25519/: fn.curve25519.html  fn.curve25519_base.html  fn.ge_scalarmult_base.html  fn.sc_muladd.html  fn.sc_reduce.html  index.html  struct.Fe.html  struct.GeCached.html  struct.GeP1P1.html  struct.GeP2.html  struct.GeP3.html  struct.GePrecomp.html
crypto/digest/: index.html  trait.Digest.html
crypto/ed25519/: fn.exchange.html  fn.keypair.html  fn.signature.html  fn.verify.html  index.html
crypto/fortuna/: constant.MIN_POOL_SIZE.html  index.html  struct.Fortuna.html
crypto/ghash/: index.html  struct.Ghash.html  struct.GhashWithC.html
crypto/hc128/: index.html  struct.Hc128.html
crypto/hkdf/: fn.hkdf_expand.html  fn.hkdf_extract.html  index.html
crypto/hmac/: index.html  struct.Hmac.html
crypto/mac/: index.html  struct.MacResult.html  trait.Mac.html
crypto/md5/: index.html  struct.Md5.html
crypto/pbkdf2/: fn.pbkdf2.html  fn.pbkdf2_check.html  fn.pbkdf2_simple.html  index.html
crypto/poly1305/: index.html  struct.Poly1305.html
crypto/rc4/: index.html  struct.Rc4.html
crypto/ripemd160/: index.html  struct.Ripemd160.html
crypto/salsa20/: fn.hsalsa20.html  index.html  struct.Salsa20.html
crypto/scrypt/: fn.scrypt.html  fn.scrypt_check.html  fn.scrypt_simple.html  index.html  struct.ScryptParams.html
dbus/: enum.ArrayError.html  enum.BusType.html  enum.ConnectionItem.html  enum.MessageItem.html  enum.MessageType.html  enum.NameFlag.html  enum.ReleaseNameReply.html  enum.RequestNameReply.html  enum.WatchEvent.html  index.html  sidebar-items.js  struct.BusName.html  struct.Connection.html  struct.ConnectionItems.html  struct.Error.html  struct.ErrorName.html  struct.Interface.html  struct.Member.html  struct.Message.html  struct.OwnedFd.html  struct.Path.html  struct.PropHandler.html  struct.Props.html  struct.Signature.html  struct.Watch.html  trait.FromMessageItem.html  type.TypeSig.html
examples/: example.rs
gmp/: index.html  sidebar-items.js
num/: fn.pow.html
rand/: struct.AsciiGenerator.html  struct.Generator.html
secret_service/: enum.EncryptionType.html  enum.SsError.html  index.html  sidebar-items.js  struct.Collection.html  struct.Item.html  struct.SecretService.html  type.Result.html
src/: collection.rs  error.rs  item.rs  item_proxy.rs  lib.rs  session.rs  ss.rs  ss_crypto.rs  util.rs
src/proxy/: mod.rs  (+5 more)
(+311 files in other folders)
