[package]
authors = ["Walther Chen <walther.chen@gmail.com>"]
description = "Library to interface with Secret Service API"
documentation = "https://docs.rs/secret-service"
homepage = "https://github.com/hwchen/secret-service-rs.git"
keywords = ["secret-service", "password", "linux", "keychain"]
license = "MIT OR Apache-2.0"
name = "secret-service"
repository = "https://github.com/hwchen/secret-service-rs.git"
edition = "2021"
version = "2.0.1"
rust-version = "1.60.0"

# The async runtime features mirror those of `zbus` for compatibility.
[features]
default = ["async-io"]
async-io = ["zbus/async-io"]
tokio = ["zbus/tokio"]

[dependencies]
# TODO: Update these when Rust 1.56 isn't so new.
aes = "0.7.0"
block-modes = "0.8.0"
hkdf = "0.12.0"
once_cell = "1"
futures-util = "0.3"
num = "0.4.0"
rand = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.0"
zbus = { version = "3", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
